src/objects/PRO_OAuth_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PRO OAuth Settings</label>
    <fields>
        <fullName>Auth_Callback_URL__c</fullName>
        <label>Auth Callback URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>ClientID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Directory_Callback_URL__c</fullName>
        <label>Contact Directory Callback URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snooze_PRO_Callback_URL__c</fullName>
        <label>Snooze PRO Callback URL</label>
        <type>Url</type>
    </fields>
</CustomObject>